--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "mobx-react": "^9.1.0",
     "mobx-react-lite": "^4.0.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.202",
