--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.6.7",
+    "clipboard-copy": "^4.0.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "mobx": "^6.12.0",
